k8s/mainfest/keyclock/base/oauth2-proxy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
        args:
          - "--provider=oidc"
          - "--client-id=vikunja-app"
          - "--client-secret=$(CLIENT_SECRET)"
          - "--cookie-secret=abcdefghijklmnopqrstuvwxyz123456"
          - "--cookie-domain=.qa.local"
          - "--oidc-issuer-url=http://keycloak.keycloak.svc.cluster.local:8080/realms/vikunja"
          - "--redirect-url=http://oauth2-proxy.qa.local/oauth2/callback"
          - "--http-address=0.0.0.0:4180"
          - "--email-domain=*"
        ports:
          - containerPort: 4180
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: auth
spec:
  ports:
    - port: 4180
      targetPort: 4180
  selector:
    app: oauth2-proxy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: auth
spec:
  ingressClassName: nginx
  rules:
    - host: oauth2-proxy.qa.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
